--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gestão de Banca</title>
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body class="theme--light">
     <main class="main-content">
@@ -111,7 +111,7 @@
         </div>
       </section>
     </main>
-    <script src="/js/functions.js"></script>
-    <script src="/js/themeChanger.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/themeChanger.js"></script>
   </body>
 </html>
