--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!--PROFILE-->
         <div class="profile-card">
           <img
-            src="/assets/img/WhatsApp Image 2024-10-04 at 16.52.22.jpeg"
+            src="assets/img/WhatsApp Image 2024-10-04 at 16.52.22.jpeg"
             class="profile-card__image"
             alt="Foto do usuário Marcelo Sassi"
           />
